# -*- makefile -*-
#
# Copyright (c) 2016 Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# note - headers and nodist_headers will go in ${includedir}/openmpi,
# not ${includedir}/
headers = \
        dataContainer.h \
        UDExceptions.h \
        sensorInterface.h \
        baseFactory.h

lib_LTLIBRARIES = libsensysplugins.la
libsensysplugins_la_SOURCES = \
        dataContainer.cpp \
        baseFactory.cpp
