# -*- makefile -*-
#
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved.
## $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from orcm/Makefile.am

dist_orcmdata_DATA += runtime/help-orcm-runtime.txt

headers += \
        runtime/runtime.h \
        runtime/orcm_globals.h \
        runtime/orcm_info_support.h

liborcm_la_SOURCES += \
        runtime/orcm_finalize.c \
        runtime/orcm_init.c \
        runtime/orcm_info_support.c
