# -*- makefile -*-
#
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved.
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

SUBDIRS += \
        tools/ocli \
        tools/octl \
        tools/oflow \
        tools/ops \
        tools/opwrvirus \
        tools/oqueue \
        tools/oqueue \
        tools/orcm-emulator \
        tools/orcm-info \
        tools/orcmctrld \
        tools/orcmd \
        tools/orcmsched \
        tools/orun \
        tools/osub \
        tools/odiag \
        tools/otestcmd \
        tools/otop \
        tools/orcmsd \
        tools/wrappers
