# -*- makefile -*-
#
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved.
#
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

SUBDIRS += \
        tools/octl \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/wrappers

DIST_SUBDIRS += \
        tools/octl \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/wrappers
