# -*- makefile -*-
#
# Copyright (c) 2013-2014 Intel Corporation. All rights reserved.
#
# Copyright (c) 2016      Intel Corporation. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

SUBDIRS += \
        tools/octl \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/wrappers

DIST_SUBDIRS += \
        tools/octl \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/wrappers
