# -*- makefile -*-
#
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved.
## $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from orcm/Makefile.am

headers += \
        util/utils.h \
        util/cli.h \
        util/attr.h \
        util/logical_group.h \
        util/pugixml/pugixml.hpp \
        util/pugixml/pugiconfig.hpp

liborcm_la_SOURCES += \
        util/error_strings.c \
        util/utils.c \
        util/cli.c \
        util/attr.c \
        util/logical_group.c \
        util/pugixml/pugixml.cpp
