# -*- makefile -*-
#
# Copyright (c) 2013-2016 Intel, Inc. All rights reserved.
## $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from orcm/Makefile.am

headers += \
        util/utils.h \
        util/cli.h \
        util/attr.h \
        util/logical_group.h \
        util/vardata.h \
        util/parser.h \
        util/parser_api.h \
        util/xmlparser.h \
        util/pugixml/pugixml.hpp

liborcm_la_SOURCES += \
        util/error_strings.c \
        util/utils.c \
        util/cli.c \
        util/attr.c \
        util/logical_group.c \
        util/vardata.cpp \
        util/parser_api.cpp \
        util/xmlparser.cpp \
        util/pugixml/pugixml.cpp
